# DocsVision-Personal-Document-Reader-and-Explainer

./: .gitignore  README.md  package-lock.json  pyproject.toml  test_vision.py
docsvision/api/: main.py
docsvision/api/routes/: ask.py  upload.py
docsvision/api/ui/: app.py
docsvision/core/: chunking.py  embedding.py  llm.py  retriever.py  vectordb.py
docsvision/data/parsed_docs/: sample.json  samples.json
docsvision/document_model/: __init__.py  blocks.py  exporter.py  layout.py  page_structure.py
docsvision/rag/: chain.py  intent.py  pipelines.py  prompts.py  router.py
docsvision/scripts/: ingest.py  query.py
docsvision/vision/: layout_utils.py  ocr_engine.py  pdf_reader.py  pipeline.py
